# local_assistant_pro

./: README.md
local-assistant-pro/: README.md  pyproject.toml
local-assistant-pro/examples/: skill_hello.py
local-assistant-pro/local_assistant_pro/: cli.py
local-assistant-pro/local_assistant_pro/core/: config.py  doctor.py  events.py  logger.py
local-assistant-pro/local_assistant_pro/llm/: base.py  llamacpp.py
local-assistant-pro/local_assistant_pro/rag/: store.py
local-assistant-pro/local_assistant_pro/skills/: base.py  manager.py
local-assistant-pro/local_assistant_pro/speech/stt/: base.py  whisper_fw.py
local-assistant-pro/local_assistant_pro/speech/tts/: base.py  piper.py  silero.py
local-assistant-pro/local_assistant_pro/vision/: screenwatch.py
local-assistant-pro/local_assistant_pro/webapp/: app.py
local-assistant-pro/local_assistant_pro/webapp/ui/: index.html
